# ML_model

./: .gitignore  README.md  model.py  pyproject.toml  requirements.txt
