[tool.poetry]
name = "ml-model"
version = "0.1.0"
description = "Code for using ML models"
authors = ["Thowbik Dustan <beejascaptain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
